Implement complete RAG pipeline with multi-model translation and evaluation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # OpenAI API Configuration
-OPENAI_API_KEY=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
+OPENAI_API_KEY=api-key
 
 # Model Configuration (optional)
 EMBEDDING_MODEL=sentence-transformers/LaBSE
